--- a/frontend/epic-viewer/package.json
+++ b/frontend/epic-viewer/package.json
@@ -45,5 +45,10 @@
     "stream-browserify": "^3.0.0",
     "stream-http": "^3.2.0",
     "url": "^0.11.0"
+  },
+  {
+    "engines": {
+      "node": "16.x"
+    }
   }
 }
